# E-Battisseurs

./: .dockerignore  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.sh  cart.html  dashboard.html  docker-compose.yml  index.html  product.html  setup.bat
.github/workflows/: test.yml
backend/: .env.example  config.py  main.py  pyproject.toml
backend/backend/: __init__.py  database.py  models.py
backend/backend/api/: affiliate.py  analytics.py  auth.py  compliance.py  crm.py  email.py  logistics.py  marketing.py  notifications.py  orchestrator.py  orders.py  payments.py  payments_real.py  products.py  suppliers.py  suppliers_real.py
backend/tests/: test_api.py
frontend/: index.html  package.json  tailwind.config.js
n8n/: workflow-chatbot.json  workflow-order.json  workflow-sourcing.json
public/: manifest.json  sw.js
